# bnetza_bk6_scraper

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-publish.yml
docs/superpowers/plans/: 2026-07-03-bnetza-bk6-scraper.md  2026-07-03-scoped-mirror-predicates.md
docs/superpowers/specs/: 2026-07-03-bnetza-bk6-scraper-design.md  2026-07-03-scoped-mirror-predicates-design.md
src/bnetza_bk6_scraper/: __init__.py  cli.py  discovery.py  fetch.py  models.py  normalize.py  parse.py  scraper.py
unittests/: .pylintrc  test_cli.py  test_crawl.py  test_discovery.py  test_fetch.py  test_models.py  test_normalize.py  test_parse_candidates.py  test_parse_helpers.py  test_parse_index.py  test_parse_proceeding.py  test_scraper.py  test_scraper_seeds.py
unittests/fixtures/: abgeschlossene_verfahren.html  laufende_verfahren.html  proceeding_BK6-23-241_konsultation.html
