[project]
name = "bnetza_bk6_scraper"
description = "Scrapes documents of Bundesnetzagentur Beschlusskammer 6 into a structured, git-diffable mirror"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["bnetza", "bundesnetzagentur", "beschlusskammer", "energy", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # aiohttp>=3.14 removed a positional arg from ClientResponse that aioresponses 0.7.9
    # (latest) still relies on, breaking the test suite. Cap until aioresponses catches up.
    "aiohttp<3.14",
    "beautifulsoup4",
    "lxml",
    "typer",
    "pydantic>=2",
]
dynamic = ["readme", "version"]

[project.scripts]
bnetza-bk6-scraper = "bnetza_bk6_scraper.cli:app"

[project.optional-dependencies]
tests = [
    "pytest==9.1.1",
    "pytest-asyncio==1.3.0",
    "aioresponses==0.7.9",
]
linting = [
    "pylint==4.0.6"
]
type_check = [
    "mypy==2.1.0"
]
spell_check = [
    "codespell==2.4.2"
]
coverage = [
    "coverage==7.15.0"
]
formatting = [
    "black==26.5.1",
    "isort==8.0.1"
]
packaging = [
    "build==1.5.0",
    "twine==6.2.0"
]
dev = [
    "pip-tools"
]


[project.urls]
Changelog = "https://github.com/Hochfrequenz/bnetza_bk6_scraper/releases"
Homepage = "https://github.com/Hochfrequenz/bnetza_bk6_scraper"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.master]
# _version.py is auto-generated by hatch-vcs (git-ignored); no docstring / naming compliance.
ignore = ["_version.py"]
ignore-paths = [".*_version\\.py"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bnetza_bk6_scraper/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
